--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,13 @@ spring:
     url: jdbc:postgresql://localhost:5432/userdb
     username: postgres
     password: 1234
-    driverClassName: com.postgresql.jdbc.Driver
-    hikari:
-      maximumPoolSize: 10
+    jpa:
+      show-sql: true
+      properties:
+        hibernate:
+          ddl-auto: create
+          hibernate:
+            dialect: org.hibernate.dialect.PostgreSQLDialect
   jpa:
     show-sql: true
     hibernate:
